<resources>
    <string name="app_name">Emom Timer</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_workout_name">Name Your Workout</string>
    <string name="of">of</string>
    <string name="of_work"> of work</string>
    <string name="of_rest"> of rest</string>
    <string name="minute_of">minute of</string>
    <string name="minutes_of">minutes of</string>
    <string name="add_exercise">Add exercise</string>
    <string name="repeat_for">repeat for</string>
    <string name="repeat_for_x_rounds">repeat for %1$d rounds</string>
    <string name="save">Save</string>
    <string name="snackbar_undo_delete_text">Deleted exercise.</string>
    <string name="snackbar_undo_delete_button">Undo</string>
    <string name="rounds">rounds</string>
    <string name="x_minutes">%1$s minutes</string>
    <string name="title_timer">Timer</string>
    <string name="every">Every</string>
    <string name="start">Start</string>
    <string name="emom">EMOM</string>
    <string name="tabata">Tabata</string>

    <!-- region countdown timer -->
    <string name="current_round_text">Round %1$d of %2$d</string>
    <string name="current_exercise_text">%1$d %2$s</string>
    <string name="next_exercise_text">Next: %1$d %2$s</string>
    <string name="total_mins_remaining_text">%1$s minutes left in workout</string>
    <string name="simple_emom_timer_next_exercise">You are starting round %1$d of %2$d.</string>
    <string name="simple_tabata_timer_next_exercise_work">You are starting the exercise part for round %1$d of %2$d.</string>
    <string name="simple_tabata_timer_next_exercise_rest">You are starting the rest part for round %1$d of %2$d.</string>
    <string name="workout_timer_next_exercise">Next, you have %1$d seconds to do %2$d reps of %3$s.</string>
    <string name="workout_timer_round_info">You are on round %1$d of %2$d.</string>
    <string name="workout_complete">Workout complete!</string>
    <string name="done">Done</string>
    <!-- endregion -->

    <!-- region emom hints -->
    <string name="hint_one_minute">1</string>
    <string name="hint_ninety_seconds">90</string>
    <string name="hint_ten_reps">10</string>
    <string name="hint_three_rounds">3</string>
    <string name="hint_pushups">push-ups</string>
    <!-- endregion -->

    <!-- region tabata hints -->
    <string name="hint_twenty_seconds">20</string>
    <string name="hint_ten_seconds">10</string>
    <string name="hint_eight_rounds">8</string>
    <!-- endregion -->

    <!-- region alert dialogs -->
    <string name="alert_save_workout_changes">Do you want to save your changes?</string>
    <string name="alert_quit_workout">Are you sure you want to quit this workout?</string>
    <string name="alert_delete_workout">Are you sure you want to delete this workout?</string>
    <string name="alert_fill_out_fields">Please make sure all the fields are filled.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="ok">OK</string>

    <!-- region settings -->
    <string name="title_settings">Settings</string>

    <string name="what_is_emom">What is EMOM?</string>
    <string name="emom_explanation">
        An acronym for \"every minute on the minute\", EMOMs are HIIT-style workouts, in which you
        alternate between short, intense bursts of exercise with complete rest.
        \n
        \nEMOM workouts challenge you to complete an exercise for a certain number of reps in less
        than 60 seconds. The remaining time within the minute serves as your recovery.
        \n
        \nThey are very versatile - you can focus on cardio or strength, use bodyweight or
        equipment, and are usually anywhere from 4 to 45 minutes long.
    </string>

    <string name="what_is_tabata">What is Tabata?</string>
    <string name="tabata_explanation">
        In a Tabata workout, each round lasts four minutes. You alternate between 20 seconds of
        all-out intensity, followed by 10 seconds of rest, repeated eight times.
    </string>

    <string name="saved_exercises">Saved exercises</string>
    <!-- endregion -->
</resources>
