<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="exercise"
            type="com.sherryyuan.emomtimer.models.Exercise" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/minute_count_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_one_minute">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/minute_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minWidth="@dimen/size_16"
                android:text="@={exercise.numMinutes}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute_of" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reps_count_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ten_reps">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reps_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minWidth="@dimen/size_16"
                android:text="@={exercise.numReps}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/exercise_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pushups">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/exercise_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/size_16"
                android:text="@={exercise.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_delete" />

    </LinearLayout>
</layout>